force-app/main/default/objects/Linked_Listing__c/Linked_Listing__c.object-meta.xml
<CustomObject>
    <label>Linked-Listing</label>
    <nameField>
        <displayFormat>LL-{0000}</displayFormat>
        <label>Linked-Listing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked-Listings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>