force-app/main/default/objects/Linked_Listing__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipLabel>Linked-Listings</relationshipLabel>
    <relationshipName>Linked_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>