force-app/main/default/objects/Linked_Listing__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <label>Listing</label>
    <referenceTo>Listing__c</referenceTo>
    <relationshipLabel>Linked-Listings</relationshipLabel>
    <relationshipName>Linked_Listings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>